--- a/ensyu/17_2.css
+++ b/ensyu/17_2.css
@@ -2,5 +2,5 @@
 body {
     height: 100vh;
     margin: 0;
-    background: url(img/bg_dot.png) #9fd9f6 left top repeat;
+    background: url(img/bg_cat.png) right bottom no-repeat ;
 }
