--- a/challenge2/ch2.css
+++ b/challenge2/ch2.css
@@ -5,12 +5,15 @@
 ----------------------------*/
 * {
   box-sizing: border-box;
-  font-family: HGS明朝E;
+  font-family: 'Kaisei HarunoUmi', serif;
   margin: 0;
 }
 body {
+
   margin: 0;
   padding: 40px;
+  background: url(wood.jpg) #504643 left top repeat;
+  text-align: center;
 }
 .wrapper {
   background: #f9f8ee;
@@ -52,3 +55,11 @@ em {
 /*----------------------------
 この下に、CSSの指定を記述していきましょう。
 ----------------------------*/
+ul{
+  list-style: none;
+  padding-left: 0;
+  display: flex;
+}
+li{
+  flex: 1 1 20%
+}
